# pneumonia_detection

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.yaml
configs/data/: chest_xray.yaml
configs/inference/: default.yaml
scripts/: run_triton.sh
src/pneumonia_detect/: commands.py  constants.py  data_utils.py  infer.py  to_onnx.py  train.py  triton_client.py  triton_setup.py
